[package]
name = "handy-dandy-macros"
description = "A collection of some handy dandy macros."
version = "0.1.0"
edition = "2021"
authors = ["Jesper Hasselquist <jesper.hasselquist@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Joxtacy/handy-dandy-macros"
homepage = "https://github.com/Joxtacy/handy-dandy-macros"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
